--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindcss/ui": "^0.7.2",
     "autoprefixer": "^10.2.4",
+    "lodash": "^4.17.20",
     "next": "10.0.5",
     "postcss": "^8.2.5",
     "postcss-flexbugs-fixes": "^5.0.2",
