--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.3.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "@tailwindcss/ui": "^0.7.2",
+    "@types/lodash": "^4.14.168",
     "autoprefixer": "^10.2.4",
-    "lodash": "^4.17.20",
+    "heroicons-react": "^1.3.0",
+    "lodash": "4.17.2",
     "next": "10.0.5",
     "postcss": "^8.2.5",
     "postcss-flexbugs-fixes": "^5.0.2",
